# blabbergraph

./: .gitignore  Cargo.toml  flake.nix
src/: main.rs
src/model/: bus.rs  config.rs  mod.rs  routing.rs  state.rs  strip.rs
src/pw/: graph.rs  link_factory.rs  message.rs  mod.rs  node_factory.rs  peak_monitor.rs  registry.rs  thread.rs  volume.rs
src/tray/: service.rs
src/ui/: app.rs  bus_widget.rs  channel_strip.rs  matrix_view.rs  mixer_view.rs  mod.rs  output_widget.rs  strip_widget.rs  window.rs
